@@ -13,6 +13,18 @@ java {
 	}
 }
 
+tasks.withType(JavaCompile).configureEach {
+	options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test).configureEach {
+	jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec).configureEach {
+	jvmArgs += "--enable-preview"
+}
+
 repositories {
 	mavenCentral()
 	maven { url 'https://repo.spring.io/snapshot' }
@@ -23,6 +35,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+	implementation 'org.projectlombok:lombok'
+	implementation 'org.seleniumhq.selenium:selenium-java:4.27.0'
+	implementation 'org.seleniumhq.selenium:selenium-devtools-v131:4.27.0'
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
